--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <header class="cabecalho">
-<img class="cabecalho-imagem" src="img/robotics.png" alt="logo-profissao">
+<img class="cabecalho-imagem" src="img/peter-pan.png" alt="logo-profissao">
 <ul class="cabecalho-lista">
 <li class="cabecalho-lista-item">Escola</li>
 <li class="cabecalho-lista-item">profissao</li>
@@ -19,23 +19,21 @@
 </header>
 <section class="profissao">
 <div class="profissao-div-conteudo">
-<h2 class="profissao-titulo">Sobre a Robótica</h2>
-<p class="profissao-titulo-um"> A robótica é um campo multidisciplinar que envolve conhecimentos de
-mecânica, eletrônica, hidráulica, pneumática e computação.</p>
-<p class="profissao-titulo-dois"> A robótica é o estudo dos robôs, que, por sua vez, são sistemas autônomos
-existentes no mundo físico capazes de sentir o ambiente e agir sobre ele.</p>
+<h2 class="profissao-titulo">Sobre o peter pan</h2>
+<p class="profissao-titulo-um"> O peter pan é um personagem fictício da série de livros peter pan e a terra do nunca, peter pan é o cara.</p>
+<p class="profissao-titulo-dois"> peter pan ainda é o cara.</p>
 </div>
 <img class="profissao-imagem" src="img/Robotics-cuate .png" alt="robo">
 </section>
 <!--Segunda seção do meu código-->
 <section id="profissao">
-<h2 class="profissao-titulo">Áreas da Minha Profissão</h2>
+<h2 class="profissao-titulo">Reações do peter pan</h2>
 <div class="profissao-todos">
 <span></span>
 <div class="profissao-div">
-<img class="profissao-imagem" src="Marcelo.jpeg"
+<img class="profissao-imagem" src="img/peterpanzinho.jpeg"
 alt="foto ">
-<h3 class="profissao-nome">Nome Imagem 01</h3>
+<h3 class="profissao-nome">Peter pan brabo</h3>
 <a href="https://linkedin.com"><img
 class="profissao-icone" src="img/linkedin.png"
 alt="icone linkedin"></a>
@@ -45,8 +43,8 @@ alt="icone instagram"></a>
 </div>
 
 <div class="profissao-div">
-<img class="profissao-imagem" src="Gabi.jpg" alt="foto ">
-<h3 class="profissao-nome">Nome Imagem 02</h3>
+<img class="profissao-imagem" src="img/image.png" alt="foto ">
+<h3 class="profissao-nome">peter pan feliz</h3>
 <a href="https://www.linkedin.com"><img class="profissao-icone"
 src="img/linkedin.png" alt="icone linkedin"></a>
 <a
