--- a/index.html
+++ b/index.html
@@ -13,23 +13,17 @@
 <header class="cabecalho">
 <img class="cabecalho-imagem" src="img/peter-pan.png" alt="logo-profissao">
 <ul class="cabecalho-lista">
-<li class="cabecalho-lista-item">Escola</li>
-<li class="cabecalho-lista-item">profissao</li>
+<li class="cabecalho-lista-item">História</li>
+<li class="cabecalho-lista-item">peter pan</li>
 </ul>
 </header>
 <section class="profissao">
 <div class="profissao-div-conteudo">
-<<<<<<< HEAD
-<h2 class="profissao-titulo">Sobre o peter pan</h2>
-<p class="profissao-titulo-um"> A robótica é um campo multidisciplinar que envolve conhecimentos de
-mecânica, eletrônica, hidráulica, pneumática e computação.</p>
-<p class="profissao-titulo-dois"> A robótica é o estudo dos robôs, que, por sua vez, são sistemas autônomos
-existentes no mundo físico capazes de sentir o ambiente e agir sobre ele.</p>
-=======
+
 <h2 class="profissao-titulo">Sobre o peter pan</h2>
 <p class="profissao-titulo-um"> O peter pan é um personagem fictício da série de livros peter pan e a terra do nunca, peter pan é o cara.</p>
 <p class="profissao-titulo-dois"> peter pan ainda é o cara.</p>
->>>>>>> a119ace727ad8fa228c01e92d1fdaaf222bdc5b0
+
 </div>
 <img class="profissao-imagem" src="img/Robotics-cuate .png" alt="robo">
 </section>
@@ -39,12 +33,10 @@ existentes no mundo físico capazes de sentir o ambiente e agir sobre ele.</p>
 <div class="profissao-todos">
 <span></span>
 <div class="profissao-div">
-<<<<<<< HEAD
-<img class="profissao-imagem" src="img/"
+
 =======
 <img class="profissao-imagem" src="img/peterpanzinho.jpeg"
->>>>>>> a119ace727ad8fa228c01e92d1fdaaf222bdc5b0
-alt="foto ">
+
 <h3 class="profissao-nome">Peter pan brabo</h3>
 <a href="https://linkedin.com"><img
 class="profissao-icone" src="img/linkedin.png"
@@ -66,7 +58,7 @@ alt="icone instagram"></a>
 </div>
 <div class="profissao-div">
 <img class="profissao-imagem" src="img/peterpanchorando.jpeg" alt="foto">
-<h3 class="profissao-nome">Nome Imagem 03</h3>
+<h3 class="profissao-nome">Peter pan triste</h3>
 <a href="https://www.linkedin.com"><img class="profissao-icone"
 src="img/linkedin.png" alt="icone linkedin"></a>
 <a href="https://www.instagram.com"><img
