--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <p class="profissao-titulo-dois"> peter pan ainda é o cara.</p>
 
 </div>
-<img class="profissao-imagem" src="img/Robotics-cuate .png" alt="robo">
+<img class="profissao-imagem" src="img/peterpanlivro.jpeg" alt="robo">
 </section>
 <!--Segunda seção do meu código-->
 <section id="profissao">
@@ -69,7 +69,7 @@ alt="icone instagram"></a>
 <span></span>
 </section>
 <footer class="rodape">
-<p> <strong>Samuel Freitas</strong></p>
+<p> <strong>Pedro Mateus</strong></p>
 </footer>
 </body>
 </html>
